--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -14,5 +14,5 @@ jobs:
     uses: creatorflow-io/shared-workflows/.github/workflows/shared-pack.yml@master
     with:
        Stage: alpha
-       JuiceRefVersion: 7.0.3-alpha.*
+       JuiceRefVersion: 7.0.3
     secrets: inherit
